[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Splash/Sounds/sea-waves.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Splash/Scripts/Splash.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Splash/Images/wern-logo.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Splash/Images/fzt-logo.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FZT"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("FZTLogo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WernLogo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Wern"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("WernLogo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Splash" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -5.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="WernLogo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 768, 300 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="FZTLogo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 256, 300 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 145, 0 )

[node name="AnimationSplash" type="AnimationPlayer" parent="."]
anims/FZT = SubResource( 1 )
anims/Wern = SubResource( 2 )

[node name="TimerChangeScene" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationSplash" to="." method="_on_AnimationSplash_animation_finished"]
[connection signal="timeout" from="TimerChangeScene" to="." method="_on_TimerChangeScene_timeout"]
